updated readme to follow standards and updated template yaml to reflect the same standard

--- a/deployment/git-actions/template_git_action_jira_issue_creation.yml
+++ b/deployment/git-actions/template_git_action_jira_issue_creation.yml
@@ -9,10 +9,10 @@ jobs:
       - name: Jira Creation Demo
         uses: senzing/git-action-jira-issue-creation@1.0.0
         env:
-          JIRA_API_TOKEN: 'jiraApiToke'
-          JIRA_USERNAME: 'user@email.com'
-          JIRA_ACCOUNT_URL: 'https://someaccount.atlassian.net/'
-          JIRA_PROJECT: 'git-action-jira-issue-creation'
-          JIRA_ISSUE_TYPE: 'Demo''ing Jira Issue Creation'
-          JIRA_ISSUE_DESCRIPTION: 'Demo''ing Jira Issue Creation'
-          JIRA_ISSUE_SUMMARY: 'Demo''ing Jira Issue Creation'
+          JIRA_ACCOUNT_URL: https://someaccount.atlassian.net/
+          JIRA_API_TOKEN: jiraApiToke
+          JIRA_ISSUE_DESCRIPTION: Demo'ing Jira Issue Creation
+          JIRA_ISSUE_SUMMARY: Demo'ing Jira Issue Creation
+          JIRA_ISSUE_TYPE: Demo'ing Jira Issue Creation
+          JIRA_PROJECT: git-action-jira-issue-creation
+          JIRA_USERNAME: user@email.com
