--- a/.github/workflows/ci-test-build.yml
+++ b/.github/workflows/ci-test-build.yml
@@ -6,7 +6,7 @@ on:
       - master
 
 jobs:
-  ciTestBuildOnBranch:
+  ciBuild:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
@@ -14,8 +14,4 @@ jobs:
         run: printenv
       - name: Build Docker Image
         id: build_docker_image
-        run: |
-          docker build --tag git-action-jira-issue-creation:${GITHUB_HEAD_REF:-${GITHUB_REF##*/}} \
-            --build-arg "GITHUB_HEAD_REF=${GITHUB_HEAD_REF:-${GITHUB_REF##*/}}" \
-            --build-arg "GITHUB_EVENT_NAME=${GITHUB_EVENT_NAME}" \
-            build/docker
+        run: make docker-build
