added checkout and merge logic to workflow

--- a/.github/workflows/push-build.yml
+++ b/.github/workflows/push-build.yml
@@ -6,12 +6,16 @@ on:
       - master
 
 jobs:
-  ciBuild:
+  pushBuild:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
       - name: Print Environment Variables
         run: printenv
+      - name: Check out to branch
+        run: git checkout ${GITHUB_HEAD_REF:-${GITHUB_REF##*/}}
+      - name: Merge master into branch
+        run: git merge master
       - name: Build Docker Image
         id: build_docker_image
         run: make docker-build
