--- a/.github/workflows/pull-request-build.yml
+++ b/.github/workflows/pull-request-build.yml
@@ -6,7 +6,7 @@ on:
       - master
 
 jobs:
-  prBuild:
+  pullRequestBuild:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
