--- a/.github/workflows/pull-request-build.yml
+++ b/.github/workflows/pull-request-build.yml
@@ -12,6 +12,10 @@ jobs:
       - uses: actions/checkout@v1
       - name: Print Environment Variables
         run: printenv
+      - name: Check out to branch
+        run: git checkout ${GITHUB_HEAD_REF:-${GITHUB_REF##*/}}
+      - name: Merge master into branch
+        run: git merge origin/master
       - name: Build Docker Image
         id: build_docker_image
         run: make docker-build
