--- a/.github/workflows/pull-request-build.yml
+++ b/.github/workflows/pull-request-build.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Print Environment Variables
         run: printenv
       - name: Check out to branch
-        run: git checkout ${GITHUB_HEAD_REF:-${GITHUB_REF##*/}}
+        run: git checkout origin/${GITHUB_HEAD_REF:-${GITHUB_REF##*/}}
       - name: Merge master into branch
         run: git merge origin/master
       - name: Build Docker Image
