--- a/.github/workflows/push-build.yml
+++ b/.github/workflows/push-build.yml
@@ -16,4 +16,8 @@ jobs:
         run: git checkout origin/${GITHUB_HEAD_REF:-${GITHUB_REF##*/}}
       - name: Build Docker Image
         id: build_docker_image
-        run: make docker-build
+        run: |
+          make \
+            GITHUB_HEAD_REF=${GITHUB_HEAD_REF:-${GITHUB_REF##*/}} \
+            GITHUB_EVENT_NAME=${GITHUB_EVENT_NAME} \
+            docker-build
